new component for schedule properties created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 schedule.curl.port=110
-schedule.curl.initial-port=10001
-schedule.curl.end-port=23000
+schedule.curl.initial-port=10
+schedule.curl.end-port=20
+schedule.curl.urls=https://schedule1.rayita.com,https://schedule2.rayita.com,https://schedule3.rayita.com,https://schedule4.rayita.com,https://schedule5.rayita.com
